Fix banner alignment

--- a/css/mixture.less
+++ b/css/mixture.less
@@ -182,6 +182,12 @@ main,
     margin: @ini_spacer;
 }
 */
+[dir=ltr] #mixture__branding_banner {
+    text-align: right;
+}
+[dir=rtl] #mixture__branding_banner {
+    text-align: left;
+}
 #mixture__title,
 #mixture__tagline {
     display: block;
